<resources>
    <string name="app_name">TB Management</string>
    <string name="error_empty_email">Please enter an email</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="help_us_saves_lives">Help Us Save Lives</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="error_empty_password">Please enter an email</string>
    <string name="error_password_length">Password must be 6 digit or bigger</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="send_forgot_password_link">Send Login Link</string>
    <string name="send_forgot_password_info">Trouble logging in?</string>
    <string name="send_email_info">Enter you email and we’ll send you a link to get back into your account.</string>

    <!-- Custom layout used for the tab bar design -->
    <style name="MyMaterialTheme" parent="MyMaterialTheme.Base"></style>

    <style name="MyMaterialTheme.Base" parent="Theme.AppCompat.Light.DarkActionBar">
        <item name="windowNoTitle">true</item>
        <item name="windowActionBar">false</item>
        <item name="colorPrimary">@color/colorPrimary</item>
        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
        <item name="colorAccent">@color/colorAccent</item>
    </style>

    <!-- Fragment Text -->
    <string name="Today_fragment">Hello ... I will be working on the future</string>
    <string name="Patient_fragment">Hello Patient fragment</string>

    <!-- Action Menu Text -->
    <string name="action_signOut">Sign Out</string>
    <string name="action_about">About Tuberculosis</string>
    <string name="action_Terms">Terms and Conditions</string>


    <!-- Registration Form-->
    <string name="Full_Name">Full Name</string>
    <string name="Date_Of_Birth">Date of birth</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Patient">Flat Number</string>
    <string name="Flat_Number">Flat Number</string>
    <string name="Address">Address</string>
    <string name="City">city/town</string>
    <string name="post_code">Post Code</string>
    <string name="Stage_of_Diagnosis">Stage of Diagnosis</string>
    <string name="save">Save</string>
    <string name="Complete_The_Form">Please complete the form fully</string>

    <!-- Login Activity-->
    <string name="Google_Services_missing">You need to have Google Services Installed to use the Application! or make sure it is up to date.</string>
    <string name="Log_in_failed"> Login failed.</string>
    <string name="Profile_Failed_TO_Create">Something went wrong. The profile was not created.</string>

    <string name="Email_Sent">Email sent</string>
    <string name="you_are_Connected">You are connected to the internet</string>
    <string name="you_are_NOT_Connected">Please make sure you are connected to the internet</string>
    <string name="termaAndConditions_Text">These Website Standard Terms and Conditions written on this webpage shall manage your use of this website. These Terms will be applied fully and affect to your use of this Website. By using this Website, you agreed to accept all terms and conditions written in here. You must not use this Website if you disagree with any of these Website Standard Terms and Conditions. Minors or people below 18 years old are not allowed to use this Website.</string>
    <string name="agree">Agree</string>
    <string name="Iagree">I agree and accept all the terms</string>
    <string name="No_date">"No date available"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email_Password_Wrong">Email or Password is wrong</string>


</resources>
