<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_reaset_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mohsenqaysi.tbmanagement.reasetPassword">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/lock_icon"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp" />

    <TextView
        android:text="@string/send_forgot_password_info"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        tools:text="@string/send_forgot_password_info"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="@+id/imageView"
        app:layout_constraintLeft_toLeftOf="@+id/imageView" />

    <TextView
        android:text="@string/send_email_info"
        android:textColor="@color/colorAccent"
        android:textStyle="normal"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_width="278dp"
        android:layout_height="50dp"
        android:id="@+id/textView5"
        tools:text="@string/send_email_info"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="@+id/imageView" />

    <EditText
        android:id="@+id/resetEmail_ID"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:drawablePadding="20dp"
        android:drawableTint="@color/textEditorColor"
        android:maxLines="1"
        android:hint="@string/email"
        android:drawableStart="@drawable/user"
        android:inputType="textEmailAddress"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:drawableLeft="@drawable/user" />

    <Button
        android:id="@+id/sendloginUserEmail_ID"
        android:layout_width="248dp"
        android:layout_height="48dp"
        android:layout_margin="0dp"
        android:background="#6585A8"
        android:text="@string/send_forgot_password_link"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toBottomOf="@+id/resetEmail_ID"
        android:layout_marginTop="24dp" />



</android.support.constraint.ConstraintLayout>
