<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"

    tools:context="com.example.mohsenqaysi.tbmanagement.Login">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="22dp"
        android:gravity="center_horizontal"
        android:text="@string/help_us_saves_lives"
        android:textColor="@android:color/background_light"
        android:textSize="26sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="66dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

             <!--Data input-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/userName_ID"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:drawableTint="#000000"
                    android:maxLines="1"
                    android:hint="@string/user_name"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/userNamePassword_ID"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:maxLines="1"
                    android:drawablePadding="20dp"
                    android:drawableTint="#000000"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="#d67601"
                android:text="@string/sign_in"
                android:onClick="printLoginOutput"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />

            <Button
                android:layout_width="307dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingTop="5dp"
                android:background="@null"
                android:text="@string/forgot_password" />

        </LinearLayout>

    </RelativeLayout>

    <!--<ImageButton-->
        <!--android:id="@+id/user_profile_photo"-->
        <!--android:layout_width="100dp"-->
        <!--android:layout_height="100dp"-->
        <!--android:layout_marginTop="26dp"-->
        <!--android:elevation="4dp"-->
        <!--android:layout_below="@+id/login_title"-->
        <!--android:layout_centerHorizontal="true" />-->

</RelativeLayout>
