<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_patients_details_registration_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mohsenqaysi.tbmanagement.PatientsDetailsRegistrationForm"
    android:background="@color/colorAccent">

    <Button
        android:id="@+id/prifileImage_ID"
        android:background="@drawable/profileplcaeholder"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible"
        android:layout_height="65dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        android:layout_width="65dp" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:background="@color/com_facebook_button_login_silver_background_color"
        app:layout_constraintTop_toBottomOf="@+id/prifileImage_ID"
        android:id="@+id/constraintLayout">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/IndianStates_spinner_ID"
            android:entries="@array/gender"
            app:layout_constraintHorizontal_bias="0.52"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/fullName_ID"
            app:layout_constraintBottom_toTopOf="@+id/phoneNumber_ID"
            android:layout_marginBottom="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toRightOf="@+id/dateOfBirth_ID" />

        <Button
            android:text="@string/save"
            android:textColor="@color/tw__solid_white"
            android:textSize="14sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/save_ID"
            android:background="@color/saveDatanButtonColor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/StageofDiagnosis_ID"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.75" />

        <!--Full name input-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fullName_ID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/fullName_InputText_ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawablePadding="20dp"
                android:drawableTint="@color/textEditorColor"
                android:hint="@string/Full_Name"
                android:inputType="textPersonName"
                android:maxLines="1"
                tools:ignore="RtlHardcoded" />
        </android.support.design.widget.TextInputLayout>

        <!-- Data of birth input-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/dateOfBirth_ID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="150dp"
            android:layout_marginRight="150dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/fullName_ID">

            <EditText
                android:id="@+id/dateOfBirth_InputText_ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawablePadding="20dp"
                android:drawableTint="@color/textEditorColor"
                android:hint="@string/Date_Of_Birth"
                android:inputType="date"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>


        <!-- Phone Number input-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/phoneNumber_ID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/dateOfBirth_ID"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp">

            <EditText
                android:id="@+id/phoneNumber_InputText_ID"
                android:layout_height="match_parent"
                android:drawablePadding="20dp"
                android:drawableTint="@color/textEditorColor"
                android:hint="@string/Phone_Number"
                android:inputType="phone"
                android:maxLines="1"
                android:layout_width="match_parent"
                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="0dp"
                android:layout_weight="1" />
        </android.support.design.widget.TextInputLayout>


        <!-- Flat Number input-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/flatNumber_ID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="150dp"
            android:layout_marginRight="150dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumber_ID">

            <EditText
                android:id="@+id/flatNumber_InputText_ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawablePadding="20dp"
                android:drawableTint="@color/textEditorColor"
                android:hint="@string/Flat_Number"
                android:inputType="numberDecimal"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>
µ
        <!-- Address input-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/Address_ID"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/flatNumber_ID">

            <EditText
                android:id="@+id/Address_InputText_ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawablePadding="20dp"
                android:drawableTint="@color/textEditorColor"
                android:hint="@string/Address"
                android:inputType="textPostalAddress"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <!-- City input-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/city_ID"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.43"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/Address_ID">

            <EditText
                android:id="@+id/city__InputText_ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawablePadding="20dp"
                android:drawableTint="@color/textEditorColor"
                android:hint="@string/City"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <!-- PostCode input-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/PostCode_ID"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/Address_ID"
            android:layout_width="100dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintBottom_toTopOf="@+id/StageofDiagnosis_ID">

            <EditText
                android:id="@+id/PostCode__InputText_ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawablePadding="20dp"
                android:drawableTint="@color/textEditorColor"
                android:hint="@string/post_code"
                android:inputType="text"
                android:maxLines="1"
                android:layout_weight="1" />
        </android.support.design.widget.TextInputLayout>

        <!-- Stage of Diagnosis input-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/StageofDiagnosis_ID"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="0dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/city_ID"
            android:layout_marginStart="8dp">

            <EditText
                android:id="@+id/StageofDiagnosis__InputText_ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawablePadding="20dp"
                android:drawableTint="@color/textEditorColor"
                android:hint="@string/Stage_of_Diagnosis"
                android:inputType="number"
                android:maxLines="1"
                android:layout_weight="1" />

        </android.support.design.widget.TextInputLayout>


    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
